--- a/MoneyManager/MoneyManager.csproj
+++ b/MoneyManager/MoneyManager.csproj
@@ -199,6 +199,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="RegisterLineItemDetailVM.cs" />
+    <Compile Include="RegisterStyleConverter.cs" />
     <Compile Include="RegisterView.xaml.cs">
       <DependentUpon>RegisterView.xaml</DependentUpon>
     </Compile>
