--- a/MoneyManager/MoneyManager.csproj
+++ b/MoneyManager/MoneyManager.csproj
@@ -119,6 +119,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AnalysisDetailsWindow.xaml.cs">
+      <DependentUpon>AnalysisDetailsWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AnalysisItemType.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -207,6 +210,10 @@
     <Compile Include="UserAccount.cs">
       <DependentUpon>Model2.tt</DependentUpon>
     </Compile>
+    <Page Include="AnalysisDetailsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="AnalysisView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -322,7 +329,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
