--- a/MoneyManager/MoneyManager.csproj
+++ b/MoneyManager/MoneyManager.csproj
@@ -175,6 +175,9 @@
     <Compile Include="EntryHeader.cs">
       <DependentUpon>Model3.tt</DependentUpon>
     </Compile>
+    <Compile Include="Envelope.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="LineItemsView.xaml.cs">
       <DependentUpon>LineItemsView.xaml</DependentUpon>
     </Compile>
@@ -220,6 +223,13 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Model3.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="MonthYear.cs" />
+    <Compile Include="NewCategoryWin.xaml.cs">
+      <DependentUpon>NewCategoryWin.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="NewSavingsCatWindow.xaml.cs">
+      <DependentUpon>NewSavingsCatWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="PasswordWindow.xaml.cs">
       <DependentUpon>PasswordWindow.xaml</DependentUpon>
@@ -295,6 +305,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="NewCategoryWin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="NewSavingsCatWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="PasswordWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
